# rust-todo-axum

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Local.Dockerfile  README.md  TODO.md  atlas.hcl  compose.yaml  config.toml.example  fly.toml  keycloak_export.json  liquibase-changelog.xml  liquibase.properties  local_config.toml  package.json  railway.json  schema.hcl
.cargo/: audit.toml
.github/workflows/: build.yaml
api/: Cargo.toml
api/src/: main.rs  state.rs
api/src/adapters/: authentication.rs  database.rs  mod.rs  static_files.rs
api/src/adapters/controllers/: tasks.rs  users.rs
entity/: Cargo.toml
entity/src/: lib.rs  state.rs  tasks.rs  users.rs
migration/: Cargo.toml  init.sql  kc_export.json  liquibase-changelog.xml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231130_232448_task_owner.rs  tables.rs
migrations/: 20240531082213_initial.sql  atlas.sum
migrations/2023-10-01-212429_new_todo/: up.sql
rinja_axum/: Cargo.toml
rinja_axum/src/: lib.rs
src/: main.rs  migrations.rs  model.rs  schema.rs  state.rs  tasks_repository.rs
src/adapters/: mod.rs  static_files.rs
src/adapters/controllers/: users.rs
src/adapters/views/: homepage.rs  mod.rs
src/adapters/views/fragments/: scaffold.rs
src/infra/: authentication.rs  database.rs  mod.rs
src/infra/tasks/: controller.rs
utils/: Cargo.toml
utils/src/: authentication.rs  clerk_user.rs  config.rs  lib.rs  state.rs
utils/src/authentication/: axum_auth.rs  mod.rs  models.rs
views/: Cargo.toml
views/src/: errors.rs  filters.rs  homepage.rs  lib.rs
views/src/components/: mod.rs  navbar.rs  scaffold.css  scaffold.js  scaffold.rs  spinner.rs  user_auth.js  user_auth.rs
views/src/extractors/: mod.rs  valid_form.rs
views/src/fragments/: error.rs  list_tasks.rs  mod.rs  new_task.css  new_task.rs  scaffold.rs  task.rs  tasks_commons.rs  tasks_create.rs  tasks_list.rs  user_auth.rs
views/src/pages/: homepage.rs  mod.rs
views/templates/: auth.jinja.html  base.jinja.html  error.jinja.html  navbar.jinja.html  styles.css  task-form.jinja.html  task-list.jinja.html
views/templates/pages/: index.jinja.html
views/www/: _hyperscript.min.js.br  app_auth.js  app_auth.js.br  bootstrap.min.js.br  htmx.min.js.br  idiomorph-ext.min.js.br
www/: clerk.js
