# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["api", "migration", "entity", "views", "utils"]
resolver = "2"

[workspace.dependencies]
axum = "^0.7.0"
axum-macros = "^0.4.0"
log = "0.4.20"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
sea-orm = { version = "=1.0.0-rc.4", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
openidconnect = "3.5.0"
jsonwebtoken = { version = "9", default-features = false }
serde = { version = "1", features = ["derive", "std"] }
serde_valid = "0.19.0"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Samuel O. Silva <samuel@slva.fr>"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
