# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["api", "entity", "views", "utils"]
resolver = "2"

[workspace.dependencies]
axum = "^0.7"
axum-macros = "^0.4"
log = "^0.4"
tracing = "^0.1"
tracing-log = "^0.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "^0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
sea-orm = { version = "=1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
jsonwebtoken = { version = "^9", default-features = false }
serde = { version = "^1", features = ["derive", "std"] }
tower = "^0.4.13"
serde_valid = "0.19.0"
axum-extra = { version = "^0.9", features = ["cookie", "cookie-private"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "^0.5", features = ["trace", "fs", "set-header"] }

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Samuel O. Silva <samuel@slva.fr>"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
