[package]
name = "rust_todo_api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
views = { path = "../views" }

axum = { workspace = true }
axum-macros = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["trace", "fs", "set-header"] }

[lints]
workspace = true
