[package]
name = "rust_todo_api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
views = { path = "../views" }
utils = { path = "../utils" }

axum = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["trace", "fs", "set-header"] }

[lints]
workspace = true
