[package]
name = "rust_todo_api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
views = { path = "../views" }
utils = { path = "../utils" }

axum = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
log = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

[lints]
workspace = true
