[package]
name = "entity"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "^0.12.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }

[lints]
workspace = true
