[package]
name = "entity"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde_valid = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
lru = { version = "^0.12" }
once_cell = { workspace = true }

[lints]
workspace = true
