[package]
name = "migration"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[dependencies.sea-orm-migration]
version = "0.12"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[lints]
workspace = true
