[package]
name = "migration"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[dependencies.sea-orm-migration]
version = "0.12"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[lints]
workspace = true
