[package]
name = "migration"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[dependencies.sea-orm-migration]
version = "=1.0.0-rc.5"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[lints]
workspace = true
