[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }

axum = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
openidconnect = { workspace = true }
reqwest = { workspace = true }

sea-orm = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
tower = { workspace = true }
config = "0.14.0"
once_cell = "^1.19.0"
serde_json = "^1"

[lints]
workspace = true
