[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }

axum = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }

sea-orm = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
tower = { workspace = true }
serde_urlencoded = "^0.7"
config = "^0.14.0"
once_cell = "^1.19.0"
sha2 = "^0.10.8"
base64ct = { version = "^1.6.0", features = ["alloc"] }

[dependencies.uuid]
version = "^1.8.0"
features = ["v4", "serde"]

[lints]
workspace = true
