[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }

axum = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }

sea-orm = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde_urlencoded = "^0.7"
serde_json = "^1.0.0"
either = { version = "^1.0.0", features = ["serde"] }
config = "^0.15.0"
sha2 = "^0.10.8"
base64ct = { version = "^1.6.0", features = ["alloc"] }
uuid = { workspace = true }

[lints]
workspace = true
