[package]
name = "views"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "views"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
utils = { path = "../utils" }

maud = { version = "0.27", features = ["axum"] }
serde_html_form = "0.2.5"
serde_valid = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
